# Auto-Affection-Skip

./: .gitignore  Auto-Affection-Skip.sln  README.md
AutoAffectionSkip.Core/: AutoAffectionSkip.Core.exp  AutoAffectionSkip.Core.lib  AutoAffectionSkip.Core.vcxproj  AutoAffectionSkip.Core.vcxproj.filters  imageProcessing.cpp  imageProcessing.h  macro.cpp  macro.h  pch.h
AutoAffectionSkip.UI/: App.xaml.cs  AutoAffectionSkip.UI.csproj  ButtonInfo.cs  Form1.Designer.cs  Form1.cs  ImagePaths.cs  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  Program.cs
Core/: CMakeLists.txt  Core.vcxproj  dllmain.cpp  framework.h  imageProcessing.cpp  imageProcessing.h  macro.cpp  macro.h
UI/: App.xaml  ButtonInfo.cs  ImagePaths.cs  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  UI.csproj
